--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
     <!-- Görsel -->
-    <img src="/3c4f54ee5046428cbb1368a8f5090e0a.jpg" alt="Profil Fotoğrafı" />
+    <img src="https://www.webtekno.com/images/editor/default/0004/46/7f277b7ddfbf0e3539035028639f6114c3d68640.jpeg" alt="Profil Fotoğrafı" />
 
     <h1>Beni affedecek misin?</h1>
 
