--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
     <!-- Görsel -->
-    <img src="https://www.webtekno.com/images/editor/default/0004/46/7f277b7ddfbf0e3539035028639f6114c3d68640.jpeg" alt="Profil Fotoğrafı" />
+    <img src="images_1.jpg" alt="Profil Fotoğrafı" />
 
     <h1>Beni affedecek misin?</h1>
 
