--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body>
 
-    <img src="/images_1.jpg" />
+    <img src="/images_1.jpg"/>
     <h1>Sürekli Gül Diye Benim İşim Varkende</h1>
 
     <div class="button-container">
@@ -103,8 +103,8 @@
     </div>
 
     <!-- SES DOSYALARI -->
-    <audio id="yesSound" src="/Kayıt.m4a"></audio>
-    <audio id="noSound" src="/Kayıt (2).m4a"></audio>
+    <audio id="yesSound" src="/Kayıt.mp3"></audio>
+    <audio id="noSound" src="/Kayıt-_2_.mp3"></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script>
