--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body>
 
-    <img src="/images_1.jpg"/>
+    <img src="images_1.jpg"/>
     <h1>Sürekli Gül Diye Benim İşim Varkende</h1>
 
     <div class="button-container">
